--- a/app/src/main/res/layout/fragment_book_sell.xml
+++ b/app/src/main/res/layout/fragment_book_sell.xml
@@ -151,7 +151,7 @@
                     android:elevation="10dp"
                     android:text="Sell"
                     android:textColor="#fff"
-                    android:textSize="20dp"
+                    android:textSize="15sp"
                     android:textStyle="bold"/>
 
             </RelativeLayout>
