--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -42,7 +42,7 @@
 
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/name"
+                android:id="@+id/name1"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="320dp"
                 android:layout_height="wrap_content"
@@ -52,6 +52,7 @@
 
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="text"
@@ -63,16 +64,17 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/email"
+                android:id="@+id/email1"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="320dp"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/name"
+                android:layout_below="@id/name1"
                 android:layout_marginStart="40dp"
                 android:layout_marginTop="20dp"
                 android:hint="Email-id">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="text"
@@ -85,17 +87,18 @@
 
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/password"
+                android:id="@+id/password1"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="320dp"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/email"
+                android:layout_below="@id/email1"
                 android:layout_marginStart="40dp"
                 android:layout_marginTop="20dp"
                 android:hint="password"
                 app:passwordToggleEnabled="true">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textPassword"
@@ -109,16 +112,17 @@
 
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/phone_number"
+                android:id="@+id/phone_number1"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="320dp"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/password"
+                android:layout_below="@+id/password1"
                 android:layout_marginStart="40dp"
                 android:layout_marginTop="20dp"
                 android:hint="phone number">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/phone_number"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="number"
@@ -131,16 +135,17 @@
 
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/address"
+                android:id="@+id/address1"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="320dp"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/phone_number"
+                android:layout_below="@+id/phone_number1"
                 android:layout_marginStart="40dp"
                 android:layout_marginTop="20dp"
                 android:hint="Address">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/address"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="text"
@@ -153,16 +158,17 @@
 
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/semester"
+                android:id="@+id/semester1"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="320dp"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/address"
+                android:layout_below="@+id/address1"
                 android:layout_marginStart="40dp"
                 android:layout_marginTop="20dp"
                 android:hint="Semester">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/semester"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="number"
@@ -175,17 +181,17 @@
 
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/branch"
+                android:id="@+id/branch1"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="320dp"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/semester"
+                android:layout_below="@id/semester1"
                 android:layout_marginStart="40dp"
                 android:layout_marginTop="20dp"
                 android:hint="Branch">
 
                 <com.google.android.material.textfield.TextInputEditText
-
+                    android:id="@+id/branch"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="text"
@@ -198,16 +204,17 @@
 
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/enrollment"
+                android:id="@+id/enrollment1"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="320dp"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/branch"
+                android:layout_below="@id/branch1"
                 android:layout_marginStart="40dp"
                 android:layout_marginTop="20dp"
                 android:hint="Enrollment number">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/enrollment"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="text"
@@ -222,16 +229,17 @@
 
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/college"
+                android:id="@+id/college1"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="320dp"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/enrollment"
+                android:layout_below="@+id/enrollment1"
                 android:layout_marginStart="40dp"
                 android:layout_marginTop="20dp"
                 android:hint="college name">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/college"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="text"
@@ -245,7 +253,7 @@
                 android:id="@+id/signup_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/college"
+                android:layout_below="@+id/college1"
                 android:layout_centerInParent="true"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="40dp"
