Log in ,sign in ,bug report

--- a/app/src/main/res/layout/activity_report_bug.xml
+++ b/app/src/main/res/layout/activity_report_bug.xml
@@ -57,7 +57,7 @@
 
 
     <Button
-        android:id="@+id/login_button"
+        android:id="@+id/submit_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/discription_text"
