Asymmetric Image Loading

--- a/app/src/main/res/layout/sale_item_details.xml
+++ b/app/src/main/res/layout/sale_item_details.xml
@@ -101,7 +101,7 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/colorbutton"
+        android:background="@color/color_button"
         android:text="REQUEST"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -166,7 +166,7 @@
         android:layout_height="30dp"
         android:text="Already 10 people have requested"
         android:textSize="20sp"
-        android:textColor="@color/colorbutton"
+        android:textColor="@color/color_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
