--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="baige">#e6e6ff</color>
     <color name="text">#5C62A7</color>
     <color name="ham">#D2D3E6</color>
-    <color name="colorbutton">#EF4B4C</color>
+    <color name="color_button">#EF4B4C</color>
     <color name="colortext">#DCDAE8</color>
     <color name="layoutcolor">#ffff</color>
     <color name="backgroundcolor">#DCDAE8</color>
