--- a/app/src/main/res/drawable/button_radius.xml
+++ b/app/src/main/res/drawable/button_radius.xml
@@ -6,7 +6,7 @@
 
         <shape android:shape="rectangle">
 
-            <solid android:color="@color/colorbutton" />
+            <solid android:color="@color/color_button" />
 
             <corners android:radius="10dp" />
 
