--- a/app/src/main/res/layout/layout_grid_item.xml
+++ b/app/src/main/res/layout/layout_grid_item.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    xmlns:card_view="http://schemas.android.com/tools"
     android:layout_margin="5dp">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
         android:background="@drawable/img_view_radius"
-        android:backgroundTint="@color/baige"
-        android:layout_centerHorizontal="true">
+        android:backgroundTint="@color/baige">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -19,21 +17,21 @@
             android:padding="9dp">
 
             <ImageView
+                android:id="@+id/image_widget"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:src="@mipmap/ic_launcher"
-                android:id="@+id/image_widget"
                 android:background="@color/baige"
-                android:scaleType="center"/>
+                android:scaleType="center"
+                android:src="@mipmap/ic_launcher" />
 
             <TextView
+                android:id="@+id/name_widget"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="India"
-                android:id="@+id/name_widget"
                 android:layout_below="@+id/image_widget"
                 android:layout_marginTop="10dp"
-                android:textColor="#000"/>
+                android:text="India"
+                android:textColor="#000" />
 
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
