--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -46,9 +46,9 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="320dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="40dp"
                 android:layout_marginTop="20dp"
                 android:hint="full name"
+                android:layout_centerHorizontal="true"
                 app:boxCornerRadiusBottomEnd="10dp"
                 app:boxCornerRadiusBottomStart="10dp"
                 app:boxCornerRadiusTopEnd="10dp"
@@ -56,14 +56,13 @@
                 app:boxStrokeColor="@color/colorPrimaryDark">
 
 
-
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="text"
                     android:drawableLeft="@drawable/ic_person"
-                    android:drawablePadding="10dp">
+                    android:drawablePadding="10dp"
+                    android:inputType="text">
 
                 </com.google.android.material.textfield.TextInputEditText>
 
