sale item details activity button color

--- a/app/src/main/res/layout/activity_sale_item_detail.xml
+++ b/app/src/main/res/layout/activity_sale_item_detail.xml
@@ -107,7 +107,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="204dp"
         android:layout_marginTop="160dp"
-
+        android:background="@drawable/button_radius"
         android:text="REQUEST"
 
         android:textStyle="bold"
