--- a/app/src/main/res/layout/layout_grid_item.xml
+++ b/app/src/main/res/layout/layout_grid_item.xml
@@ -2,13 +2,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="5dp">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:background="@drawable/img_view_radius"
+        app:cardCornerRadius="15dp"
         android:backgroundTint="@color/baige">
 
         <RelativeLayout
