--- a/app/src/main/res/layout/sale_item_details.xml
+++ b/app/src/main/res/layout/sale_item_details.xml
@@ -33,21 +33,21 @@
         app:layout_constraintTop_toBottomOf="@+id/book_image"
         app:layout_constraintVertical_bias="0.025" />
 
-    <TextView
-        android:id="@+id/book_edition"
-        android:layout_width="73dp"
-        android:layout_height="21dp"
-        android:text="6th Edition"
-        android:textStyle="normal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.068"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/book_publication"
-        app:layout_constraintVertical_bias="0.0" />
 
+   <TextView
+       android:id="@+id/book_edition"
+       android:layout_width="73dp"
+       android:layout_height="21dp"
+       android:text="6th Edition"
+       android:textStyle="normal"
+       app:layout_constraintBottom_toBottomOf="parent"
+       app:layout_constraintEnd_toEndOf="parent"
+       app:layout_constraintHorizontal_bias="0.071"
+       app:layout_constraintStart_toStartOf="parent"
+       app:layout_constraintTop_toBottomOf="@+id/book_publication"
+       app:layout_constraintVertical_bias="0.052" />
 
-    <TextView
+   <TextView
         android:id="@+id/book_publication"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -73,94 +73,92 @@
         app:layout_constraintTop_toBottomOf="@+id/book_edition"
         app:layout_constraintVertical_bias="0.028" />
 
-    <TextView
-        android:id="@+id/book_price"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="56dp"
-        android:text="250"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/button"
-        app:layout_constraintHorizontal_bias="0.084"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/book_edition" />
+   <TextView
+       android:id="@+id/book_price"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_marginTop="28dp"
+       android:text="250"
+       android:textSize="30sp"
+       android:textStyle="bold"
+       app:layout_constraintEnd_toStartOf="@+id/button"
+       app:layout_constraintHorizontal_bias="0.084"
+       app:layout_constraintStart_toStartOf="parent"
+       app:layout_constraintTop_toBottomOf="@+id/book_writer" />
 
-    <ImageView
-        android:id="@+id/rupee_symbol"
-        android:layout_width="23dp"
-        android:layout_height="40dp"
-        android:layout_below="@id/book_writer"
-        android:layout_marginTop="28dp"
-        app:layout_constraintEnd_toStartOf="@+id/button"
-        app:layout_constraintHorizontal_bias="0.044"
-        app:layout_constraintStart_toEndOf="@+id/book_price"
-        app:layout_constraintTop_toBottomOf="@+id/book_writer" />
+   <ImageView
+       android:id="@+id/rupee_symbol"
+       android:layout_width="23dp"
+       android:layout_height="40dp"
+       android:layout_below="@id/book_writer"
+       android:layout_marginTop="28dp"
+       app:layout_constraintEnd_toStartOf="@+id/button"
+       app:layout_constraintHorizontal_bias="0.009"
+       app:layout_constraintStart_toEndOf="@+id/book_price"
+       app:layout_constraintTop_toBottomOf="@+id/book_writer" />
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@color/color_button"
-        android:text="REQUEST"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/book_image"
-        app:layout_constraintVertical_bias="0.422" />
+   <Button
+       android:id="@+id/button"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_marginEnd="16dp"
+       android:background="@color/color_button"
+       android:text="REQUEST"
+       android:textStyle="bold"
+       app:layout_constraintBottom_toBottomOf="parent"
+       app:layout_constraintEnd_toEndOf="parent"
+       app:layout_constraintTop_toBottomOf="@+id/book_image"
+       app:layout_constraintVertical_bias="0.44" />
 
-    <TextView
-        android:id="@+id/seller_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Tirth Trivedi"
-        android:textSize="20dp"
-        android:textStyle="normal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.052"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/book_price"
-        app:layout_constraintVertical_bias="0.16" />
+   <TextView
+       android:id="@+id/seller_name"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_marginTop="16dp"
+       android:text="Tirth Trivedi"
+       android:textSize="20dp"
+       android:textStyle="normal"
+       app:layout_constraintEnd_toEndOf="parent"
+       app:layout_constraintHorizontal_bias="0.052"
+       app:layout_constraintStart_toStartOf="parent"
+       app:layout_constraintTop_toBottomOf="@+id/book_price" />
 
-    <TextView
-        android:id="@+id/status"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="STATUS"
-        android:textSize="15dp"
-        android:textStyle="normal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.044"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/seller_name"
-        app:layout_constraintVertical_bias="0.112" />
+   <TextView
+       android:id="@+id/status"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_marginTop="8dp"
+       android:text="STATUS"
+       android:textSize="15dp"
+       android:textStyle="normal"
+       app:layout_constraintEnd_toEndOf="parent"
+       app:layout_constraintHorizontal_bias="0.047"
+       app:layout_constraintStart_toStartOf="parent"
+       app:layout_constraintTop_toBottomOf="@+id/seller_name" />
 
-    <TextView
-        android:id="@+id/status_value"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="20dp"
-        android:text="Requested"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/seller_number" />
+   <TextView
+       android:id="@+id/status_value"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_marginStart="256dp"
+       android:layout_marginTop="16dp"
+       android:text="Requested"
+       app:layout_constraintStart_toEndOf="@+id/status"
+       app:layout_constraintTop_toBottomOf="@+id/seller_number" />
 
-    <TextView
-        android:id="@+id/seller_number"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="6352699747"
-        android:textSize="20dp"
-        android:textStyle="normal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/seller_name"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+   <TextView
+       android:id="@+id/seller_number"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_marginStart="168dp"
+       android:layout_marginTop="16dp"
+       android:text="6352699747"
+       android:textSize="20dp"
+       android:textStyle="normal"
+       app:layout_constraintStart_toEndOf="@+id/seller_name"
+       app:layout_constraintTop_toBottomOf="@+id/button" />
 
-    <TextView
+   <TextView
         android:id="@+id/countofrequest"
         android:layout_width="318dp"
         android:layout_height="30dp"
