--- a/app/src/main/res/layout/fragment_tool_sell.xml
+++ b/app/src/main/res/layout/fragment_tool_sell.xml
@@ -30,7 +30,7 @@
                     android:padding="30dp"
                     android:src="@drawable/new_camera" />
 
-                <com.google.android.material.textfield.TextInputLayout
+                <!--<com.google.android.material.textfield.TextInputLayout
 
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                     android:layout_width="330dp"
@@ -50,7 +50,7 @@
                         android:layout_height="wrap_content"
                         android:inputType="text" />
 
-                </com.google.android.material.textfield.TextInputLayout>
+                </com.google.android.material.textfield.TextInputLayout>-->
 
                 <com.google.android.material.textfield.TextInputLayout
 
@@ -58,7 +58,7 @@
                     android:layout_width="330dp"
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
-                    android:layout_marginTop="254dp"
+                    android:layout_marginTop="259dp"
                     android:hint="Item Description"
                     app:boxCornerRadiusBottomEnd="10dp"
                     app:boxCornerRadiusBottomStart="10dp"
@@ -109,6 +109,13 @@
                     android:textColor="#fff"
                     android:textSize="15sp"
                     android:textStyle="bold" />
+                <Spinner
+                    android:id="@+id/toolList"
+                    android:layout_width="330dp"
+                    android:layout_height="50dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_below="@id/imgTool"
+                    android:layout_marginTop="20dp"/>
 
                 <!--<Spinner
                     android:id="@+id/toolList"
