--- a/app/src/main/res/layout/fragment_tool_sell.xml
+++ b/app/src/main/res/layout/fragment_tool_sell.xml
@@ -58,7 +58,7 @@
                     android:layout_width="330dp"
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
-                    android:layout_marginTop="259dp"
+                    android:layout_marginTop="269dp"
                     android:hint="Item Description"
                     app:boxCornerRadiusBottomEnd="10dp"
                     app:boxCornerRadiusBottomStart="10dp"
@@ -113,6 +113,7 @@
                     android:id="@+id/toolList"
                     android:layout_width="330dp"
                     android:layout_height="50dp"
+                    android:background="@drawable/spinner_border"
                     android:layout_centerHorizontal="true"
                     android:layout_below="@id/imgTool"
                     android:layout_marginTop="20dp"/>
