--- a/app/src/main/res/layout/activity_sale_item_detail.xml
+++ b/app/src/main/res/layout/activity_sale_item_detail.xml
@@ -68,10 +68,10 @@
 
     <TextView
         android:id="@+id/book_writer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/book_name"
-        android:layout_width="78dp"
         android:layout_marginLeft="10dp"
-        android:layout_height="30dp"
         android:layout_marginTop="8dp"
         android:text="By J.S Khatre"
 
