Commited to learn

--- a/app/src/main/res/layout/activity_sale_item_detail.xml
+++ b/app/src/main/res/layout/activity_sale_item_detail.xml
@@ -59,7 +59,6 @@
         android:layout_marginTop="8dp"
         android:text="Tech Max Publication"
         android:layout_below="@+id/book_writer"
-
         android:textStyle="normal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.028"
@@ -74,7 +73,6 @@
         android:layout_marginLeft="10dp"
         android:layout_marginTop="8dp"
         android:text="By J.S Khatre"
-
         android:textStyle="normal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.028"
@@ -120,9 +118,11 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/book_edition"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="292dp"
+        android:layout_alignParentEnd="true"
 
+        android:layout_marginStart="292dp"
         android:layout_marginTop="27dp"
+        android:layout_marginEnd="31dp"
         android:background="@drawable/button_radius"
         android:text="REQUEST"
         android:textStyle="bold"
@@ -169,8 +169,10 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/book_request_button"
         android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
         android:layout_marginStart="314dp"
         android:layout_marginTop="15dp"
+        android:layout_marginEnd="42dp"
         android:text="STATUS"
         android:textSize="15dp"
         android:textStyle="normal"
@@ -185,8 +187,10 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/status"
         android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
         android:layout_marginStart="311dp"
         android:layout_marginTop="11dp"
+        android:layout_marginEnd="33dp"
         android:text="Requested"
         app:layout_constraintStart_toEndOf="@+id/seller_number"
         app:layout_constraintTop_toBottomOf="@+id/status" />
