--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -18,7 +18,7 @@
 
         <item
             android:id="@+id/nav_knowledge"
-            android:icon="@drawable/ic_logout"
+            android:icon="@drawable/ic_book"
             android:title="Knowledge" />
 
 
