--- a/app/src/main/res/layout/fragment_received_items.xml
+++ b/app/src/main/res/layout/fragment_received_items.xml
@@ -6,9 +6,11 @@
     tools:context=".requestedItemPackage.ReceivedItemsFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <androidx.recyclerview.widget.RecyclerView
+    android:id="@+id/received_items_recyclerview"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#fff"
+    android:orientation="vertical" />
 
 </FrameLayout>
