--- a/app/src/main/res/layout/recieved_items.xml
+++ b/app/src/main/res/layout/recieved_items.xml
@@ -81,16 +81,26 @@
                 app:srcCompat="@drawable/ic_book" />
 
             <Button
-                android:id="@+id/button"
-                android:layout_width="232dp"
-                android:layout_height="33dp"
-                android:layout_marginTop="28dp"
+            android:id="@+id/delivered_button"
+            android:layout_width="136dp"
+            android:layout_height="29dp"
+            android:layout_marginTop="32dp"
+            android:background="@drawable/button_radius"
+            android:text="Delivered"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.156"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView" />
+
+            <Button
+                android:id="@+id/cancel_button"
+                android:layout_width="136dp"
+                android:layout_height="29dp"
+                android:layout_marginTop="32dp"
                 android:background="@drawable/button_radius"
-                android:text="return"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.496"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageView" />
+                android:text="Cancel"
+                app:layout_constraintTop_toBottomOf="@+id/imageView"
+                tools:layout_editor_absoluteX="223dp" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
