--- a/app/src/main/res/layout/requested_items.xml
+++ b/app/src/main/res/layout/requested_items.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
@@ -10,7 +11,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/request_item_card"
         android:layout_width="391dp"
-        android:layout_height="116dp"
+        android:layout_height="225dp"
         android:layout_marginTop="10dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -43,17 +44,18 @@
                 android:text="Item DESC"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.015"
+                app:layout_constraintHorizontal_bias="0.011"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/request_item_item">
+                app:layout_constraintTop_toBottomOf="@+id/request_item_item"
+                app:layout_constraintVertical_bias="0.132">
 
 
             </TextView>
 
             <TextView
                 android:id="@+id/request_item_status"
-                android:layout_width="114dp"
-                android:layout_height="20dp"
+                android:layout_width="115dp"
+                android:layout_height="31dp"
                 android:layout_marginStart="28dp"
                 android:layout_marginBottom="12dp"
                 android:text="Status
@@ -61,7 +63,9 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent">
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/request_item_desc"
+                app:layout_constraintVertical_bias="0.166">
 
 
             </TextView>
@@ -75,7 +79,38 @@
                 app:layout_constraintHorizontal_bias="0.938"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.323"
                 app:srcCompat="@drawable/ic_book" />
+
+            <Button
+                android:id="@+id/buyer_requested_accept_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Review"
+
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.283"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.91">
+
+            </Button>
+
+            <Button
+                android:id="@+id/buyer_requested_reject_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:text="Return"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.735"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.91">
+
+            </Button>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
