--- a/app/src/main/res/layout/fragment_informative_post.xml
+++ b/app/src/main/res/layout/fragment_informative_post.xml
@@ -5,10 +5,11 @@
     android:layout_height="match_parent"
     tools:context=".KnowledgeFragmentsTabs.InformativePostFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/info_recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:background="#fff"
+        android:orientation="vertical"/>
 
 </FrameLayout>
