--- a/app/src/main/res/layout/project_hiring.xml
+++ b/app/src/main/res/layout/project_hiring.xml
@@ -48,7 +48,7 @@
                 />
 
             <TextView
-                android:layout_width="386dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/description"
                 android:layout_alignParentStart="true"
