--- a/app/src/main/res/layout/requested_items.xml
+++ b/app/src/main/res/layout/requested_items.xml
@@ -87,6 +87,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Review"
+                android:onClick="withrating"
 
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
